--- a/css/styles.css
+++ b/css/styles.css
@@ -13,9 +13,7 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: var(--third-text-color);
 }
-h1 h2 h3 h4 h5 h6 p ul {
-  list-style: none;
-}
+
 button {
   cursor: pointer;
   border: none;
@@ -26,6 +24,9 @@ a {
 }
 link {
   text-decoration: none;
+}
+li {
+  list-style-type: none;
 }
 
 /*Шапка*/
@@ -148,6 +149,15 @@ link {
 
 /*section1*/
 
+.feature {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.feature-item {
+  width: 270px;
+}
+
 .skills {
   text-transform: uppercase;
 
@@ -159,33 +169,78 @@ link {
 }
 .skills-info {
   color: var(--general-text-color);
-
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
 }
 
-/*section_work*/
+/*Наша работа*/
+
+.work-header {
+  color: var(--second-text-color);
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: center;
+}
+
+.work-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.work-item {
+  margin-right: 30px;
+  width: 370px;
+}
+
+.work-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+/*Наша команда*/
+
+.team-container {
+  width: 1600px;
+  height: 648px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.team-list {
+  display: flex;
+  width: 1170px;
+  padding-left: 215px;
+}
+
+.team-item {
+  width: 270px;
+  height: 368px;
+  margin-right: 30px;
+  justify-content: center;
+}
 
 .type-h2 {
+  padding-top: 94px;
   color: var(--second-text-color);
-
   font-weight: bold;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
 }
 
-/*section_team*/
-
 .team {
+  text-align: center;
   background-color: var(--team-background-color);
 }
 
 .team-memb-name {
   color: var(--second-text-color);
-
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -193,20 +248,23 @@ link {
 }
 .team-position {
   color: var(--general-text-color);
-
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
 }
 
-/*footer*/
+/* portfolio portfolio portfolio portfolio portfolio portfolio portfolio portfolio*/
 
-.footer {
-  background-color: var(--first-background-color);
+.filter {
+  display: flex;
+  margin: auto;
+  justify-content: center;
+}
+.filter .item + .item {
+  margin-left: 8px;
 }
 
-/* portfolio */
 .active-button {
   background-color: var(--fist-text-color);
   color: var(--third-text-color);
@@ -229,6 +287,34 @@ link {
   background-color: var(--fist-text-color);
 }
 
+/*Список - портфолио*/
+
+.test-container {
+  width: 1240px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.flex-element {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.flex-element:nth-child(3n) {
+  margin-right: 0;
+}
+.flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+/*елементи списка портфолио*/
+
 .project-title {
   color: var(--second-text-color);
   font-weight: 700;
@@ -245,6 +331,12 @@ link {
   letter-spacing: 0.03em;
 }
 
+/*футер*/
+
+.footer {
+  background-color: var(--first-background-color);
+}
+
 .adress2 {
   color: var(--third-text-color);
 
@@ -255,7 +347,7 @@ link {
 }
 .adress3 {
   color: var(--footer-nav-text-color);
-
+  display: inline-block;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71px;
