--- a/css/styles.css
+++ b/css/styles.css
@@ -9,262 +9,211 @@
   --team-background-color: #f5f4fa;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
-  background-color: var(--third-text-color);
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 button {
+  font-family: 'Roboto', sans-serif;
   cursor: pointer;
   border: none;
   border-radius: 4px;
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: var(--third-text-color);
+}
+.conteiner {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 a {
   text-decoration: none;
 }
+
 link {
   text-decoration: none;
 }
-li {
-  list-style-type: none;
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  margin: -1px;
+}
+.list {
+  list-style: none;
 }
 
 /*Шапка*/
 
-.main-nav {
-  display: flex;
-  align-items: center;
-}
+/*Логотип*/
 
-/*logo*/
-
-.logo {
-  display: flex;
-
-  padding-top: 24px;
-  padding-bottom: 24px;
-  margin-left: 215px;
-
-  color: var(--fist-text-color);
+.header-logo {
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  color: var(--fist-text-color);
 }
 
-.logo_part2 {
+.header-logo2 {
   color: var(--fifth-color);
-}
-.logo_part2_1 {
-  color: var(--third-text-color);
 }
 
 /*nav*/
-
-.site-nav {
-  display: flex;
-  margin: auto;
-}
-
-.menu {
-  margin-left: 93px;
-}
-.site-nav .item + .item {
-  margin-left: 50px;
-}
-
-.navigation {
-  display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  color: var(--second-text-color);
+.menu-list .current {
+  color: var(--fist-text-color);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
-.site-nav .current {
-  color: var(--fist-text-color);
-}
-
-.navigation:hover,
-.navigation:focus {
-  color: var(--fist-text-color);
-}
-
-.adress {
-  display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  color: var(--general-text-color);
+.menu-link {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
 }
-.adress:hover,
-.adress:focus {
+
+.menu-link:hover,
+.menu-link:focus {
+  color: var(--fist-text-color);
+}
+
+.header-mail {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71px;
+  letter-spacing: 0.03em;
+  color: var(--general-text-color);
+}
+.header-mail:hover,
+.header-mail:focus {
+  color: var(--fist-text-color);
+}
+
+.header-tel {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71px;
+  letter-spacing: 0.03em;
+  color: var(--general-text-color);
+}
+.header-tel:hover,
+.header-tel:focus {
   color: var(--fist-text-color);
 }
 
 /*hero*/
 
 .hero {
-  padding: 200px 0;
-  text-align: center;
   background-color: var(--first-background-color);
 }
 
-.banner {
-  width: 696px;
-  margin: 0 auto;
-  margin-bottom: 30px;
-
-  text-align: center;
+/*banner*/
+h1 {
   text-transform: uppercase;
-  color: var(--third-text-color);
+}
+.banner {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
+  color: var(--third-text-color);
 }
 
 .order {
-  padding-top: 10px;
-  padding-right: 32px;
-  padding-bottom: 10px;
-  padding-left: 32px;
   background-color: var(--fist-text-color);
-  color: var(--third-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
-  font-family: inherit;
+  color: var(--third-text-color);
 }
 
 /*section1*/
 
-.feature {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.feature-item {
-  width: 270px;
-}
-
 .skills {
   text-transform: uppercase;
-
-  color: var(--second-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
 .skills-info {
-  color: var(--general-text-color);
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  color: var(--general-text-color);
 }
 
-/*Наша работа*/
-
-.work-header {
-  color: var(--second-text-color);
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-align: center;
-}
-
-.work-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.work-item {
-  margin-right: 30px;
-  width: 370px;
-}
-
-.work-item:nth-child(3n) {
-  margin-right: 0;
-}
-
-/*Наша команда*/
-
-.team-container {
-  width: 1600px;
-  height: 648px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.team-list {
-  display: flex;
-  width: 1170px;
-  padding-left: 215px;
-}
-
-.team-item {
-  width: 270px;
-  height: 368px;
-  margin-right: 30px;
-  justify-content: center;
-}
+/*section_work*/
 
 .type-h2 {
-  padding-top: 94px;
-  color: var(--second-text-color);
   font-weight: bold;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
 
+/*section_team*/
+
 .team {
-  text-align: center;
   background-color: var(--team-background-color);
 }
 
 .team-memb-name {
-  color: var(--second-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
 .team-position {
-  color: var(--general-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+  color: var(--general-text-color);
 }
 
-/* portfolio portfolio portfolio portfolio portfolio portfolio portfolio portfolio*/
+/*footer*/
 
-.filter {
-  display: flex;
-  margin: auto;
-  justify-content: center;
-}
-.filter .item + .item {
-  margin-left: 8px;
+.logo_part2_1 {
+  color: var(--third-text-color);
 }
 
+.footer {
+  background-color: var(--first-background-color);
+}
+
+/* portfolio */
 .active-button {
   background-color: var(--fist-text-color);
   color: var(--third-text-color);
@@ -275,11 +224,11 @@ li {
 }
 
 .order2 {
-  color: var(--second-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
   letter-spacing: 0.03em;
+  color: var(--second-text-color);
 }
 
 .order2:hover {
@@ -287,73 +236,26 @@ li {
   background-color: var(--fist-text-color);
 }
 
-/*Список - портфолио*/
-
-.test-container {
-  width: 1240px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-.flex-element {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-}
-.flex-element:nth-child(3n) {
-  margin-right: 0;
-}
-.flex-element:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-/*елементи списка портфолио*/
-
 .project-title {
-  color: var(--second-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: var(--second-text-color);
 }
 
 .project-text {
-  color: var(--general-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+  color: var(--general-text-color);
 }
 
-/*футер*/
-
-.footer {
-  background-color: var(--first-background-color);
-}
-
-.adress2 {
-  color: var(--third-text-color);
-
+.adress1 {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-}
-.adress3 {
-  color: var(--footer-nav-text-color);
-  display: inline-block;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71px;
-  letter-spacing: 0.03em;
-}
-.adress3:hover,
-.adress3:focus {
-  color: var(--fist-text-color);
+  color: var(--third-text-color);
 }
