--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,8 @@ img {
 /*Шапка*/
 
 .header {
+  padding-top: 32px;
+  min-height: 100px;
   background-color: var(--third-text-color);
   border-bottom: 1px solid;
   color: #ececec;
@@ -94,17 +96,11 @@ img {
   align-items: center;
 }
 
-.menu-list {
+.header-nav {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  align-items: center;
 }
 
-.menu-item:not(:last-child) {
-  margin-right: 40px;
-}
-
-/*Логотип*/
 .header-logo {
   margin-right: 93px;
   font-family: Raleway;
@@ -119,29 +115,19 @@ img {
   color: var(--fifth-color);
 }
 
-/*nav*/
-.header-nav {
+/*Меню*/
+
+.menu-list {
   display: flex;
-  align-items: center;
 }
 
-.header-connect {
-  display: flex;
-  margin-left: auto;
-  align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.menu-list .current {
-  color: var(--fist-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+.menu-item:not(:last-child) {
+  margin-right: 50px;
 }
 
 .menu-link {
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -154,7 +140,30 @@ img {
   color: var(--fist-text-color);
 }
 
+.link-current {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--fist-text-color);
+}
+
+.lust-item {
+  margin-right: 331px;
+}
+
+.header-connect {
+  display: flex;
+  align-items: center;
+}
+
+.connect-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .header-mail {
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71px;
@@ -167,6 +176,8 @@ img {
 }
 
 .header-tel {
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71px;
@@ -178,10 +189,6 @@ img {
   color: var(--fist-text-color);
 }
 
-.connect-item:not(:last-child) {
-  margin-right: 50px;
-}
-
 /*герой*/
 
 .hero {
@@ -191,7 +198,6 @@ img {
 }
 
 .hero-container {
-  width: 1600px;
   padding-left: 0;
   padding-right: 0;
   margin-top: 0;
@@ -299,6 +305,8 @@ img {
 /*Наша команда*/
 
 .team-container {
+  padding-top: 94px;
+  padding-bottom: 94px;
   background-color: var(--team-background-color);
 }
 
@@ -346,14 +354,18 @@ img {
 }
 
 /* Портфолио фильтр*/
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 .filter {
   display: flex;
   margin: auto;
   justify-content: center;
-  padding-top: 94px;
-  padding-bottom: 50px;
+  margin-bottom: 34px;
 }
+
 .filter .item + .item {
   margin-left: 8px;
 }
@@ -387,17 +399,16 @@ img {
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
+  margin-top: -30px;
   margin-left: -30px;
-  margin-bottom: -30px;
 }
 
 .portfolio-item {
   width: 370px;
+  margin-top: 30px;
   margin-left: 30px;
-  margin-bottom: 30px;
-
   background-color: var(--third-text-color);
-  border: 1px solid #eeeeee;
+
   box-sizing: border-box;
 }
 
@@ -405,9 +416,11 @@ img {
 
 .port-text-group {
   padding-top: 20px;
+  padding-right: 15px;
   padding-bottom: 20px;
-  padding-left: 24px;
+  padding-left: 33px;
   text-align: left;
+  border: 1px solid #eeeeee;
 }
 
 .project-title {
@@ -434,12 +447,9 @@ img {
   background-color: var(--first-background-color);
 }
 
-.logo-padding {
-  margin-bottom: 20px;
-}
-
 .footer-logo {
-  padding-bottom: 20px;
+  display: block;
+  margin-bottom: 20px;
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
