--- a/css/styles.css
+++ b/css/styles.css
@@ -84,8 +84,6 @@ img {
 /*Шапка*/
 
 .header {
-  padding-top: 32px;
-  min-height: 100px;
   background-color: var(--third-text-color);
   border-bottom: 1px solid;
   color: #ececec;
@@ -99,10 +97,14 @@ img {
 .header-nav {
   display: flex;
   align-items: center;
+  margin-right: 331px;
 }
 
 .header-logo {
+  display: block;
   margin-right: 93px;
+  padding-top: 24px;
+  padding-bottom: 24px;
   font-family: Raleway;
   font-weight: 700;
   font-size: 26px;
@@ -126,6 +128,7 @@ img {
 }
 
 .menu-link {
+  display: block;
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
@@ -141,15 +144,12 @@ img {
 }
 
 .link-current {
+  display: block;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--fist-text-color);
-}
-
-.lust-item {
-  margin-right: 331px;
 }
 
 .header-connect {
@@ -325,11 +325,15 @@ img {
 
 .team-item {
   flex-basis: calc(100% / 4 - 30px);
-  margin-right: 30px;
+
   background-color: var(--third-text-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.team-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .team-text-group {
@@ -363,7 +367,7 @@ img {
   display: flex;
   margin: auto;
   justify-content: center;
-  margin-bottom: 34px;
+  margin-bottom: 50px;
 }
 
 .filter .item + .item {
@@ -389,7 +393,8 @@ img {
   color: var(--second-text-color);
 }
 
-.order2:hover {
+.order2:hover,
+.order2:focus {
   color: var(--third-text-color);
   background-color: var(--fist-text-color);
 }
@@ -416,9 +421,9 @@ img {
 
 .port-text-group {
   padding-top: 20px;
-  padding-right: 15px;
+  padding-right: 24px;
   padding-bottom: 20px;
-  padding-left: 33px;
+  padding-left: 24px;
   text-align: left;
   border: 1px solid #eeeeee;
 }
